# personalization_case

./: .env.example  .gitignore  Dockerfile  README.md  SOLUTION.md  compose.yaml  entrypoint.sh  pyproject.toml
data/: events.csv  products.csv
src/: main.py
src/api/routes/: health.py  recommendations.py  schemas.py
src/core/: logging.py  middleware.py  schemas.py  settings.py  version.py
src/features/: affinity_processor.py  domain.py  events_processor.py  exceptions.py  loader.py  product_processor.py  recommendation_builder.py  schemas.py
src/model/: model_loader.py  predict.py
src/model/artifacts/: model.pkl  model_card.json
tests/: conftest.py
tests/api/: test_recommendations.py
tests/features/: conftest.py  test_affinity_processor.py  test_recommendation_builder_features.py
tests/integration/: test_end_to_end.py
