[project]
name = "personalization-case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "scikit-learn==1.8.0",
    "uvicorn>=0.51.0",
    "opentelemetry-api>=1.24.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
otel = [
    "opentelemetry-distro>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m \"not integration\""
markers = [
    "integration: end-to-end tests that boot the real FastAPI lifespan (real data + real model). Intentionally excluded from default runs -- run explicitly with: pytest -m integration",
]
